--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,114 @@ body {
   display: grid;
   grid-template-columns: 50% 50%;
 }
+
+
+
+.resize-modal-input {
+  width: 50px;
+}
+
+
+
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 100;
+}
+
+.tool-modal {
+  position: absolute;
+  width: 150px;
+  background-color: #F0F0F0;
+  color: #333;
+  border: 1px solid #c0c0c0;
+  /* border-radius: 4px; */
+  box-shadow:  0 4px 12px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  z-index: 101;
+}
+
+.modal-header {
+  padding: 2px 6px;
+  background-color: #6697ff;
+  color: white;
+  border-bottom: 1px solid #005a9e;
+  /* border-top-left-radius: 4px;
+  border-top-right-radius: 4px; */
+  cursor: move;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  user-select: none;
+}
+
+.modal-title {
+  flex-grow: 1;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.close-button {
+  background-color: #e81123;
+  color: white;
+  border: none;
+  border-radius: 0;
+  font-family: Arial, sans-serif;
+  /* font-weight: bold; */
+  font-size: 14px;
+  width: 30px;
+  height: 30px;
+  line-height: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  margin-right: -6px;
+  margin-top: -2px;
+  margin-bottom: -2px;
+  transition: background-color 0.2s;
+}
+
+.close-button:hover {
+  background-color: #f1707a;
+}
+
+.modal-content {
+  padding: 10px 8px;
+  flex-grow: 1;
+}
+
+.modal-footer {
+  padding: 4px 4px;
+  background-color: #F0F0F0;
+  /* border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px; */
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+}
+
+.modal-footer button {
+  padding: 2px 6px;
+  border: none;
+  /* border-radius: 5px; */
+  cursor: pointer;
+  font-weight: 500;
+}
+
+.btn-confirm {
+  background-color: #6697ff;
+  color: white;
+}
+
+.btn-cancel {
+  background-color: #6c757d;
+  color: white;
+}
